--- a/style/restaurant_style.css
+++ b/style/restaurant_style.css
@@ -1,41 +1,72 @@
+* {
+	margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+}
+
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: Open Sans;
+	font-size: 20px;
+	position: relative;
+	height: 100vh;
+	font-weight: 400;
 	background: #ede8e5;
 }
 
-.restaurant_button {
-	border-radius: 10px;
+.clearfix::after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.buttons {
+	position: relative;
 	width: 80%;
-	height: 80px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.restaurant_button {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	border-radius: 10px;
 	border-color: black;
-	background: white;
-	border-width: 1px;
-	margin-bottom: 15px;
+	border-width: 10px;
+	background-color: white;
+	color: black;
+	height: 130px;
+	text-align: left;
 	transition: transform 0.3s;
 }
 
-.restaurant_button:hover {
-	transform: translateY(-5px);
+.restaurant_review, .restaurant_name {
+	display: inline-block;
+	line-height: 130px;
+	font-weight: bold;
 }
 
-.button_text {
+.restaurant_img, .restaurant_star {
 	display: inline-block;
 	vertical-align: middle;
 }
 
-.rounded_square {
-	display: inline-flex;
-	vertical-align: middle;
-	justify-content: center;
-	align-items: center;
-	height: 30px;
-	width: 25px;
-	border-radius: 10px;
-	background: #eb0c00;
-	color: white;
-	font-size: 10px;
+.restaurant_img {
+	margin-right: 15px;
 }
 
-.buttons {
-	text-align: center;
+.right {
+	float: right;
+	height: 130px;
+	margin-right: 15px;
+}
+
+.left {
+	float: left;
+	height: 130px;
+	margin-left: 15px;
+}
+
+.restaurant_button:hover {
+	transform: translateY(-5px);
 }
