--- a/style/restaurant_style.css
+++ b/style/restaurant_style.css
@@ -20,30 +20,28 @@ body {
 }
 
 .buttons {
-	position: relative;
+	position: absolute;
 	width: 80%;
-	top: 50%;
+	top: 80px;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translateX(-50%);
 }
 
 .restaurant_button {
-	margin-top: 10px;
 	margin-bottom: 10px;
 	border-radius: 10px;
 	border-color: black;
-	border-width: 10px;
+	border-width: 1px;
 	background-color: white;
 	color: black;
-	height: 130px;
+	height: 110px;
 	text-align: left;
 	transition: transform 0.3s;
 }
 
 .restaurant_review, .restaurant_name {
 	display: inline-block;
-	line-height: 130px;
-	font-weight: bold;
+	line-height: 110px;
 }
 
 .restaurant_img, .restaurant_star {
@@ -57,16 +55,35 @@ body {
 
 .right {
 	float: right;
-	height: 130px;
+	height: 110px;
 	margin-right: 15px;
 }
 
 .left {
 	float: left;
-	height: 130px;
-	margin-left: 15px;
+	height: 110px;
+	margin-left: 10px;
 }
 
 .restaurant_button:hover {
 	transform: translateY(-5px);
+}
+
+.page_title {
+	position: absolute;
+	text-align: center;
+	top: 40px;
+	font-size: 24px;
+	font-weight: bold;
+	width: 80%;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+button:focus {
+	outline: 0;
+}
+
+button:hover {
+	cursor: pointer;
 }
