--- a/style/restaurant_style.css
+++ b/style/restaurant_style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .buttons {
-	position: absolute;
+	position: relative;
 	width: 80%;
 	top: 80px;
 	left: 50%;
@@ -28,20 +28,22 @@ body {
 }
 
 .restaurant_button {
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 	border-radius: 10px;
 	border-color: black;
 	border-width: 1px;
 	background-color: white;
 	color: black;
-	height: 110px;
+	height: 100px;
 	text-align: left;
 	transition: transform 0.3s;
+	width: 100%;
+	position: relative;
 }
 
 .restaurant_review, .restaurant_name {
 	display: inline-block;
-	line-height: 110px;
+	line-height: 100px;
 }
 
 .restaurant_img, .restaurant_star {
@@ -55,18 +57,18 @@ body {
 
 .right {
 	float: right;
-	height: 110px;
+	height: 100px;
 	margin-right: 15px;
 }
 
 .left {
 	float: left;
-	height: 110px;
+	height: 100px;
 	margin-left: 10px;
 }
 
 .restaurant_button:hover {
-	transform: translateY(-5px);
+	transform: translateY(-4px);
 }
 
 .page_title {
