--- a/style/restaurant_style.css
+++ b/style/restaurant_style.css
@@ -1,18 +1,3 @@
-* {
-	margin: 0;
-	box-sizing: border-box;
-	padding: 0;
-}
-
-body {
-	font-family: Open Sans;
-	font-size: 20px;
-	position: relative;
-	height: 100vh;
-	font-weight: 400;
-	background: #ede8e5;
-}
-
 .clearfix::after {
 	content: "";
 	display: table;
@@ -22,53 +7,65 @@ body {
 .buttons {
 	position: relative;
 	width: 80%;
-	top: 80px;
+	top: 40px;
 	left: 50%;
 	transform: translateX(-50%);
 }
 
 .restaurant_button {
-	margin-bottom: 5px;
-	border-radius: 10px;
-	border-color: black;
-	border-width: 1px;
+	margin-bottom: 15px;
 	background-color: white;
-	color: black;
+	border-width: 0px;
 	height: 100px;
 	text-align: left;
-	transition: transform 0.3s;
+	transition: box-shadow 0.1s;
 	width: 100%;
 	position: relative;
 }
 
 .restaurant_review, .restaurant_name {
 	display: inline-block;
+	position: absolute;
 	line-height: 100px;
+	font-size: 18px;
 }
 
 .restaurant_img, .restaurant_star {
 	display: inline-block;
-	vertical-align: middle;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.restaurant_star {
+	right: 45px;
+}
+
+.restaurant_review {
+	right: 10px;
+	font-weight: bold;
 }
 
 .restaurant_img {
-	margin-right: 15px;
+	left: 15px;
+}
+
+.restaurant_name {
+	left: 120px;
 }
 
 .right {
 	float: right;
 	height: 100px;
-	margin-right: 15px;
 }
 
 .left {
 	float: left;
 	height: 100px;
-	margin-left: 10px;
 }
 
 .restaurant_button:hover {
-	transform: translateY(-4px);
+	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 3px 15px 0 rgba(0,0,0,0.19);
 }
 
 .page_title {
@@ -82,10 +79,16 @@ body {
 	transform: translateX(-50%);
 }
 
+
+
 button:focus {
 	outline: 0;
 }
 
 button:hover {
 	cursor: pointer;
+}
+
+button {
+	color: #2C2C2C;
 }
