--- a/style/restaurant_style.css
+++ b/style/restaurant_style.css
@@ -6,7 +6,7 @@
 
 .buttons {
 	position: relative;
-	width: 80%;
+	width: 600px;
 	top: 40px;
 	left: 50%;
 	transform: translateX(-50%);
@@ -23,11 +23,11 @@
 	position: relative;
 }
 
-.restaurant_review, .restaurant_name {
+.restaurant_review, .restaurant_name, .restaurant_address, .restaurant_style {
 	display: inline-block;
 	position: absolute;
 	line-height: 100px;
-	font-size: 18px;
+	font-size: 16px;
 }
 
 .restaurant_img, .restaurant_star {
@@ -35,6 +35,10 @@
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
+}
+
+.restaurant_style {
+
 }
 
 .restaurant_star {
@@ -52,6 +56,13 @@
 
 .restaurant_name {
 	left: 120px;
+}
+
+.restaurant_address {
+	left: 120px;
+	top: 20px;
+	color: #aaaaaa;
+	font-size: 12px;
 }
 
 .right {
@@ -79,7 +90,40 @@
 	transform: translateX(-50%);
 }
 
+.left .vertical_line {
+	left: 300px;
+}
 
+.right .vertical_line {
+	right: 100px;
+}
+
+.vertical_line {
+	position: absolute;
+    border-style: none solid none none;
+	border-image: linear-gradient(to bottom,rgba(0,0,0,0), #aaaaaa, rgba(0,0,0,0)) 1 100%;
+	border-width: 1px;
+	width: 1px;
+	height: 100px;
+}
+
+.restaurant_price {
+	position: absolute;
+	line-height: 100px;
+	right: 175px;
+	top: 20px;
+	float: right;
+	color: #aaaaaa;
+	font-size: 12px;
+}
+
+.restaurant_style {
+	position: absolute;
+	line-height: 100px;
+	right: 180px;
+	float: right;
+	font-size: 16px;
+}
 
 button:focus {
 	outline: 0;
