--- a/style/index_style.css
+++ b/style/index_style.css
@@ -1,17 +1,45 @@
-.container {
-	position: relative;
-	text-align: center;
-	width: 100%;
-	height: 100%;
+body {
+	background-image: url(../images/home_background.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-color: #666666;
 }
-
-.centered {
+.welcome_header {
+	padding: 70px;
+	text-align: center;
+}
+.searchbar {
+	width: 100%;
+	position: relative;
+	display: flex;
+}
+.wrap{
+	width: 30%;
 	position: absolute;
-	top: 30%;
+	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
-.background_img {
-	float: center;
-  	filter: saturate(80%);
+.searchterm {
+	width: 100%
+	border: 3px solid black;
+	border-right: none;
+	padding: 5px;
+	height: 20px;
+	border-radius: 5px 0 0 5px;
+	outline: none;
+}
+.searchTerm:focus{
+  color: #00B4CC;
+}
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #00B4CC;
+  background: #00B4CC;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
 }
