--- a/style/index_style.css
+++ b/style/index_style.css
@@ -3,7 +3,9 @@ body {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-color: #666666;
+	background-size: 100%;
 }
+
 .welcome_header {
 	padding: 70px;
 	text-align: center;
@@ -16,23 +18,24 @@ body {
 .wrap{
 	width: 30%;
 	position: absolute;
-	top: 50%;
+	top: 25%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
 .searchterm {
 	width: 100%
-	border: 3px solid black;
+	border: 3px solid #00B4CC;
 	border-right: none;
 	padding: 5px;
 	height: 20px;
 	border-radius: 5px 0 0 5px;
 	outline: none;
+	color: #9DBFAF;
 }
-.searchTerm:focus{
+.searchterm:focus{
   color: #00B4CC;
 }
-.searchButton {
+.searchbutton {
   width: 40px;
   height: 36px;
   border: 1px solid #00B4CC;
