Fixed height on background img

--- a/style/index_style.css
+++ b/style/index_style.css
@@ -3,7 +3,7 @@ body {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-color: #666666;
-	background-size: 100%;
+	background-size: 100% 100%;
 }
 
 .welcome_header {
