--- a/style/menu_style.css
+++ b/style/menu_style.css
@@ -1,8 +1,8 @@
-.buttons {
+.menu_items {
 	position: relative;
 	width: 600px;
 	height: auto;
-	top: 40px;
+	top: 90px;
 	left: 50%;
 	transform: translateX(-50%);
 	margin-bottom: 50px;
@@ -26,7 +26,7 @@
 }
 
 .item_price {
-	right: 25px;
+	right: 130px;
 	font-weight: bold;
 }
 
@@ -42,10 +42,6 @@
 .left {
 	float: left;
 	height: 100px;
-}
-
-.menu_button:hover {
-	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 3px 15px 0 rgba(0,0,0,0.19);
 }
 
 .page_title {
@@ -64,10 +60,69 @@
 }
 
 .right .vertical_line {
-	right: 90px;
+	right: 200px;
 }
 
-.vertical_line {
+.right .vertical_line_2 {
+	right: 100px;
+}
+
+.add_button {
+	height: 30px;
+	width: 100%;
+	margin-top: 55%;
+	background-color: #2c2c2c;
+	color: white;
+	border: none;
+}
+
+.add_button:hover {
+	background-color: #666666;
+	cursor: pointer;
+}
+
+.add_button:focus {
+	outline: 0;
+}
+
+.add_button:active {
+	transform: translateY(2px);
+}
+
+.added_text {
+	position: absolute;
+	left: 105%;
+	line-height: 100px;
+	width: 150px;
+	font-size: 16px;
+	color: #5b5b5b;
+	display: none;
+}
+
+.animated_text {
+	display: block;
+	animation: fade 1s cubic-bezier(.50,0,.50,0);
+}
+
+@keyframes fade {
+	from {
+		opacity: 1;
+		top: 0px;
+	}
+	to {
+		opacity: 0;
+		top: 25px;
+	}
+}
+
+.add_wrapper {
+	position: absolute;
+	width: 60px;
+	height: 100%;
+	right: 20px;
+}
+
+.vertical_line, .vertical_line_2 {
 	position: absolute;
     border-style: none solid none none;
 	border-image: linear-gradient(to bottom,rgba(0,0,0,0), #aaaaaa, rgba(0,0,0,0)) 1 100%;
