--- a/style/menu_style.css
+++ b/style/menu_style.css
@@ -1,8 +1,8 @@
 .menu_items {
 	position: relative;
-	width: 600px;
+	width: 700px;
 	height: auto;
-	top: 90px;
+	top: 40px;
 	left: 50%;
 	transform: translateX(-50%);
 	margin-bottom: 50px;
@@ -23,6 +23,13 @@
 	position: absolute;
 	line-height: 100px;
 	font-size: 16px;
+}
+
+.menu_title {
+	position: relative;
+	text-align: center;
+	top: 30px;
+	margin-bottom: 20px;
 }
 
 .item_price {
